<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cohesion</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">386553418194450</string>
    
    <string name="notification_title">Cohesion is Online</string>
    <string name="notification_text">Tap to go offline</string>
    
    <string name="registration_message">Registering...</string>
    <string name="registration_error_title">Registration Failed</string>
    <string name="registration_error_message">Could not register with the Cohesion server. Please check your internet connection and try again.</string>
    
    <string name="class_todo">To Do</string>
    <string name="class_started">Started</string>
    <string name="class_done">Done</string>
    
    <string name="add_class_hint">(enter class number)</string>
    <string name="add_class_button">Add Class</string>
    <string name="add_class_invalid_title">Invalid Class Number</string>
    <string name="add_class_invalid_message">%1$s is not a valid class number.</string>
    <string name="add_class_no_name_title">No Class Number</string>
    <string name="add_class_no_name_message">You must enter a class number.</string>
    <string name="add_class_duplicate_title">Duplicate Class</string>
    <string name="add_class_duplicate_message">You already have a class named %1$s.</string>
    
    <string name="delete_class_confirm_title">Delete Class?</string>
    <string name="delete_class_confirm_message">Are you sure you want to delete %1$s?</string>
    
    <string name="find_people_button">Find People Working Near You</string>
    
    <string name="feedback_button">Submit Feedback</string>
    <string name="feedback_dialog_title">Submit Feedback</string>
    
    <string name="searching_message">Searching...</string>
    <string name="no_people_near">No one nearby.</string>

</resources>
