<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:id="@+id/delete_class"
        android:layout_width="32dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:clickable="true" >
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/table_border" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/delete" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/class_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/table_border" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:clickable="false"
            android:text="@string/class_todo" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/table_border"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/started"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:clickable="false"
            android:text="@string/class_started" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/table_border"
            android:clickable="false" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/done"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants" >
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:clickable="false"
            android:text="@string/class_done" />
        
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/table_border"
            android:clickable="false" />
    </LinearLayout>

</TableRow>